cmake_minimum_required(VERSION 3.28)
project(sort_algorithm)

set(CMAKE_CXX_STANDARD 23)

add_executable(sort sort.cpp)
add_executable(sorting_timer sorting_timer.cpp)
add_executable(multiple_sequence_generator multiple_sequence_generator.cpp)
add_executable(sequence_generator sequence_generator.cpp)
